fix: renommage des hosts pour que le nom soit différent du groupe

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,14 +1,14 @@
 git:
   hosts:
-    git:
+    git01:
       ansible_host: 159.8.76.123
 
 jenkins:
   hosts:
-    jenkins:
+    jenkins01:
       ansible_host: 159.8.76.125
 
 supervision:
   hosts:
-    supervision:
+    supervision01:
       ansible_host: 159.8.76.116
