Ajout des playbooks pour Jenkins

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -8,8 +8,10 @@ jenkins:
   hosts:
     jenkins01:
       ansible_host: 159.8.76.125
+      ansible_user: root
 
 supervision:
   hosts:
     supervision01:
       ansible_host: 159.8.76.116
+      ansible_user: root
