fix: playbook supervision chemin des rôles

--- a/playbooks/ans_play_install_supervision.yml
+++ b/playbooks/ans_play_install_supervision.yml
@@ -2,6 +2,6 @@
 - name: Installation groupe supervision
   hosts: supervision
   roles:
-    - role: ans_role_prometheus
-    - role: ans_role_grafana
-    - role: ans_role_node_exporter
+    - role: ../roles/ans_role_prometheus
+    - role: ../roles/ans_role_grafana
+    - role: ../roles/ans_role_node_exporter
