--- a/roles/ans_role_grafana/tasks/main.yml
+++ b/roles/ans_role_grafana/tasks/main.yml
@@ -1,9 +1,20 @@
+- name: Ajouter la clé GPG Grafana
+  ansible.builtin.apt_key:
+    url: https://packages.grafana.com/gpg.key
+    state: present
+
+- name: Ajouter le dépôt Grafana
+  ansible.builtin.apt_repository:
+    repo: "deb https://packages.grafana.com/oss/deb stable main"
+    state: present
+
 - name: Installer Grafana
   ansible.builtin.apt:
     name: grafana
     state: present
+    update_cache: true
 
-- name: Activer et démarrer Grafana
+- name: Démarrer et activer Grafana
   ansible.builtin.systemd:
     name: grafana-server
     enabled: true
