--- a/roles/ans_role_jenkins_plugins/tasks/main.yml
+++ b/roles/ans_role_jenkins_plugins/tasks/main.yml
@@ -1,7 +1,7 @@
 
 - name: Télécharger le Jenkins Plugin Manager CLI
   get_url:
-    url: https://github.com/jenkinsci/plugin-installation-manager-tool/releases/latest/download/jenkins-plugin-manager.jar
+    url: https://github.com/jenkinsci/plugin-installation-manager-tool/releases/download/2.13.2/jenkins-plugin-manager-2.13.2.jar
     dest: /opt/jenkins-plugin-manager.jar
     mode: '0755'
 
