--- a/playbooks/ans_play_install_node_exporter.yml
+++ b/playbooks/ans_play_install_node_exporter.yml
@@ -1,4 +1,7 @@
 ---
-- name: Installation du node Exporter
-  hosts: all
-  role: ans_role_node_exporter
+- name: Installation groupe supervision
+  hosts: supervision
+  roles:
+    - role: ans_role_prometheus
+    - role: ans_role_grafana
+    - role: ans_role_node_exporter
