ajout plugin prometheus

--- a/roles/ans_role_jenkins_plugins/tasks/main.yml
+++ b/roles/ans_role_jenkins_plugins/tasks/main.yml
@@ -23,6 +23,7 @@
     - git
     - maven-plugin
     - docker-workflow
+    - prometheus
   notify: Restart Jenkins
 
 - name: S'assurer que les permissions sont correctes sur le dossier plugins
