--- a/roles/ans_role_prometheus/handlers/main.yml
+++ b/roles/ans_role_prometheus/handlers/main.yml
@@ -1,2 +1,6 @@
 ---
-# handlers file for template
+
+- name: Redémarrer Prometheus
+  ansible.builtin.service:
+    name: prometheus
+    state: restarted
