feat: Génération du targets.yml à partir de l'inventaire

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -9,9 +9,11 @@ jenkins:
     jenkins01:
       ansible_host: 159.8.76.125
       ansible_user: root
+      env: integration
 
 supervision:
   hosts:
     supervision01:
       ansible_host: 159.8.76.116
       ansible_user: root
+      env: integration
