ajout VM tomcat preprod01

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -18,3 +18,10 @@ supervision:
       ansible_host: 159.8.76.116
       ansible_user: root
       env: integration
+
+webserver:
+  hosts:
+    webserver01:
+      ansible_host: 16.170.202.186
+      ansible_user: root
+      env: preprod
