--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -25,3 +25,7 @@ webserver:
       ansible_host: 16.170.202.186
       ansible_user: root
       env: preprod
+    webserver02:
+      ansible_host: 13.53.35.243
+      ansible_user: root
+      env: preprod
