change apt to package

--- a/roles/ans_role_node_exporter/tasks/main.yml
+++ b/roles/ans_role_node_exporter/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Installer Node Exporter
-  ansible.builtin.apt:
+  ansible.builtin.package:
     name: prometheus-node-exporter
     state: present
 
