feat: Ajout rôle Terraform

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,6 +1,6 @@
-git:
+terraform:
   hosts:
-    git01:
+    terraform01:
       ansible_host: 159.8.76.123
       ansible_user: root
       env: integration
