--- a/roles/ans_role_tomcat/tasks/main.yml
+++ b/roles/ans_role_tomcat/tasks/main.yml
@@ -1,15 +1,79 @@
-    - name: Installer Tomcat
-      apt:
-        name: tomcat10
-        state: present
+- name: Create tomcat group
+  group:
+    name: "{{ tomcat_group }}"
+    system: yes
 
-    - name: Installer les outils admin Tomcat
-      apt:
-        name: tomcat10-admin
-        state: present
+- name: Create tomcat user
+  user:
+    name: "{{ tomcat_user }}"
+    group: "{{ tomcat_group }}"
+    shell: /bin/false
+    home: "{{ tomcat_install_dir }}"
+    system: yes
 
-    - name: S'assurer que Tomcat est démarré
-      service:
-        name: tomcat10
-        state: started
-        enabled: yes
+- name: Download Tomcat archive
+  get_url:
+    url: "{{ tomcat_archive_url }}"
+    dest: "{{ tomcat_archive }}"
+    mode: '0644'
+
+- name: Create install directory
+  file:
+    path: "{{ tomcat_install_dir }}"
+    state: directory
+
+- name: Extract Tomcat
+  unarchive:
+    src: "{{ tomcat_archive }}"
+    dest: "{{ tomcat_install_dir }}"
+    remote_src: yes
+    creates: "{{ tomcat_install_dir }}/apache-tomcat-{{ tomcat_version }}"
+
+- name: Create symlink tomcat -> apache-tomcat
+  file:
+    src: "{{ tomcat_install_dir }}/apache-tomcat-{{ tomcat_version }}"
+    dest: "{{ tomcat_install_dir }}/current"
+    state: link
+
+- name: Set permissions
+  file:
+    path: "{{ tomcat_install_dir }}/apache-tomcat-{{ tomcat_version }}"
+    owner: "{{ tomcat_user }}"
+    group: "{{ tomcat_group }}"
+    recurse: yes
+
+- name: Create systemd service
+  copy:
+    dest: /etc/systemd/system/{{ tomcat_service_name }}.service
+    content: |
+      [Unit]
+      Description=Apache Tomcat
+      After=network.target
+
+      [Service]
+      Type=forking
+      User={{ tomcat_user }}
+      Group={{ tomcat_group }}
+
+      Environment="JAVA_HOME=/usr/lib/jvm/java-21-openjdk-amd64/"
+      Environment="CATALINA_HOME={{ tomcat_install_dir }}/current"
+      Environment="CATALINA_BASE={{ tomcat_install_dir }}/current"
+      Environment="CATALINA_PID={{ tomcat_install_dir }}/current/temp/tomcat.pid"
+
+      ExecStart={{ tomcat_install_dir }}/current/bin/startup.sh
+      ExecStop={{ tomcat_install_dir }}/current/bin/shutdown.sh
+
+      Restart=on-failure
+
+      [Install]
+      WantedBy=multi-user.target
+
+- name: Reload systemd
+  systemd:
+    daemon_reload: yes
+
+- name: Enable and start Tomcat
+  systemd:
+    name: "{{ tomcat_service_name }}"
+    enabled: yes
+    state: started
