--- a/roles/ans_role_tomcat/vars/main.yml
+++ b/roles/ans_role_tomcat/vars/main.yml
@@ -1,2 +1,8 @@
 ---
-# vars file for template
+  tomcat_version: "9.0.85"
+  tomcat_user: tomcat
+  tomcat_group: tomcat
+  tomcat_install_dir: /opt/tomcat
+  tomcat_service_name: tomcat
+  tomcat_archive_url: "https://archive.apache.org/dist/tomcat/tomcat-9/v{{ tomcat_version }}/bin/apache-tomcat-{{ tomcat_version }}.tar.gz"
+  tomcat_archive: "/tmp/apache-tomcat-{{ tomcat_version }}.tar.gz"
