--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -29,3 +29,7 @@ webserver:
       ansible_host: 13.50.235.80
       ansible_user: root
       env: preprod
+    webserver03:
+      ansible_host: 13.60.105.82
+      ansible_user: root
+      env: preprod
