--- a/roles/ans_role_robot_shop/tasks/main.yml
+++ b/roles/ans_role_robot_shop/tasks/main.yml
@@ -6,5 +6,5 @@
 
 - name: Lancer l'application avec Docker Compose
   shell:
-    cmd: docker compose up -d
+    cmd: docker compose -f docker-compose.yaml -f docker-compose-load.yaml up -d
     chdir: /opt/robot-shop
