--- a/playbooks/ans_play_install_robot_shop.yml
+++ b/playbooks/ans_play_install_robot_shop.yml
@@ -1,5 +1,5 @@
 ---
-- name: Deploiement de Stan's Robot Shop
+- name: Deploiement de Stan's Robot Shop2
   hosts: webserver03
   become: yes
   roles:
