--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -29,6 +29,8 @@ webserver:
       ansible_host: 13.50.235.80
       ansible_user: root
       env: preprod
+robotshop:
+  hosts:
     webserver03:
       ansible_host: 13.60.105.82
       ansible_user: root
