--- a/playbooks/ans_play_install_robot_shop.yml
+++ b/playbooks/ans_play_install_robot_shop.yml
@@ -1,8 +1,9 @@
 ---
 - name: Deploiement de Stan's Robot Shop2
-  hosts: webserver03
+  hosts: robotshop
   become: yes
   roles:
     - ans_role_robot_shop_tools
     - ans_role_docker_prod
     - ans_role_robot_shop
+    - ans_role_otel
