--- a/roles/ans_role_loki/tasks/main.yml
+++ b/roles/ans_role_loki/tasks/main.yml
@@ -1,34 +1,50 @@
 ---
-- name: Installer les dépendances
-  apt:
-    name: [unzip, curl]
-    state: present
-    update_cache: yes
+- name: Arrêter Loki pour la mise à jour
+  systemd:
+    name: loki
+    state: stopped
+  ignore_errors: yes
 
-- name: Télécharger le binaire Loki v3.0.0
-  get_url:
-    url: "https://github.com/grafana/loki/releases/download/v3.0.0/loki-linux-amd64.zip"
-    dest: "/tmp/loki.zip"
-
-- name: Dézipper Loki
-  unarchive:
-    src: "/tmp/loki.zip"
-    dest: "/usr/local/bin"
-    remote_src: yes
-    creates: "/usr/local/bin/loki-linux-amd64"
-
-- name: S'assurer que le binaire est exécutable
+- name: Supprimer l'ancien binaire corrompu ou obsolète
   file:
     path: /usr/local/bin/loki-linux-amd64
+    state: absent
+
+- name: Télécharger Loki v3.0.0 (Version stable pour OTLP)
+  get_url:
+    url: "https://github.com/grafana/loki/releases/download/v3.0.0/loki-linux-amd64.zip"
+    dest: "/tmp/loki_v3.zip"
+    mode: '0644'
+
+- name: Dézipper le binaire v3.0.0
+  unarchive:
+    src: "/tmp/loki_v3.zip"
+    dest: "/usr/local/bin"
+    remote_src: yes
+    owner: root
+    group: root
     mode: '0755'
 
-- name: Créer la configuration Loki avec support OTLP
+- name: Créer le répertoire de données Loki
+  file:
+    path: "{{ item }}"
+    state: directory
+    owner: root
+    group: root
+    mode: '0755'
+  loop:
+    - /tmp/loki
+    - /tmp/loki/chunks
+    - /tmp/loki/rules
+
+- name: Configurer Loki (YAML v3 compatible)
   copy:
     dest: /etc/loki-config.yaml
     content: |
       auth_enabled: false
       server:
         http_listen_port: 3100
+        grpc_listen_port: 9096
       common:
         instance_addr: 127.0.0.1
         path_prefix: /tmp/loki
@@ -43,8 +59,6 @@
       otlp:
         grpc_listen_address: "0.0.0.0:4317"
         http_listen_address: "0.0.0.0:4318"
-      limits_config:
-        allow_structured_metadata: true
       schema_config:
         configs:
           - from: 2020-10-24
@@ -55,7 +69,7 @@
               prefix: index_
               period: 24h
 
-- name: Créer le service Systemd pour Loki
+- name: Mise à jour du service Systemd
   copy:
     dest: /etc/systemd/system/loki.service
     content: |
@@ -69,7 +83,7 @@
       [Install]
       WantedBy=multi-user.target
 
-- name: Démarrer et activer Loki
+- name: Recharger systemd et démarrer Loki v3
   systemd:
     name: loki
     state: restarted
