--- a/roles/ans_role_loki/tasks/main.yml
+++ b/roles/ans_role_loki/tasks/main.yml
@@ -5,7 +5,7 @@
     state: stopped
   ignore_errors: yes
 
-- name: Nettoyer les répertoires pour repartir sur du propre
+- name: Nettoyer et créer les répertoires
   file:
     path: "{{ item }}"
     state: directory
@@ -16,9 +16,8 @@
     - /tmp/loki
     - /tmp/loki/chunks
     - /tmp/loki/rules
-    - /tmp/loki/wal
 
-- name: Appliquer la configuration Loki v3 (Syntaxe Distributor)
+- name: Appliquer la configuration Loki v3 (Syntaxe OTLP explicite)
   copy:
     dest: /etc/loki-config.yaml
     content: |
@@ -40,19 +39,13 @@
           kvstore:
             store: inmemory
 
-      # Dans la v3, l'OTLP est souvent rattaché au distributeur
-      distributor:
-        receivers:
-          otlp:
-            grpc:
-              endpoint: 0.0.0.0:4317
-            http:
-              endpoint: 0.0.0.0:4318
-
-      ingester:
-        wal:
-          enabled: true
-          dir: /tmp/loki/wal
+      # Syntaxe v3 : Le bloc otlp contient une section receiver
+      otlp:
+        receiver:
+          grpc:
+            endpoint: 0.0.0.0:4317
+          http:
+            endpoint: 0.0.0.0:4318
 
       limits_config:
         allow_structured_metadata: true
